--- a/news.html
+++ b/news.html
@@ -205,6 +205,90 @@
       </div>
       <div class="row v-pad">
         <div class="col-md-6 v-pad">
+          <div class="news-thumb"><img src="img/news-irwin.jpg" alt=""></div>
+        </div>
+        <div class="col-md-6 v-pad">
+          <div class="news-info">
+            <span class="news-date">Oct 14, 2018</span>
+            <br>
+            <br>
+            <h3>Novum Capital shares venture capital insights on blockchain investments in Jakarta</h3>
+            <br>
+            <p>Early this month, Novum Capital was at the Blockchain Asia Forum 2018: Blockchain Applications and Economics Indonesia Forum in Jakarta. Irwin Chee, Managing Consultant of Novum Capital, was the panelist on the main conference day...</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="news-detail-4.html" class="news-btn">Read More &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true">
+            </i></a> 
+          </div>
+        </div>
+      </div>
+      <div class="row v-pad">
+        <div class="col-md-6 v-pad news-invert">
+          <div class="news-thumb"><img src="img/news-coinjax.jpg" alt=""></div>
+        </div>
+        <div class="col-md-6 v-pad news-invert">
+          <div class="news-info">
+            <span class="news-date">Oct 2018</span>
+            <br>
+            <br>
+            <h3>High-tech crypto exchange, CoinJax, raises seed round with Novum Capital</h3>
+            <br>
+            <p>Novum participates in CoinJax seed round and partners strategically with the exchange going forward. CoinJax is an international high-tech cryptocurrency exchange, built from ground up with the emphasis of scalability and security...</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="news-detail-5.html" class="news-btn">Read More &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true">
+            </i></a> 
+          </div>
+        </div>
+      </div> 
+      <div class="row v-pad">
+        <div class="col-md-6 v-pad">
+          <div class="news-thumb"><img src="img/news-cm.jpg" alt=""></div>
+        </div>
+        <div class="col-md-6 v-pad">
+          <div class="news-info">
+            <span class="news-date">Aug 2018</span>
+            <br>
+            <br>
+            <h3>CloudMoolah hits US$15 million raise</h3>
+            <br>
+            <p>Following a successful US$15 million Token Sale in April 2018, Cloud Alliance’s (commonly known as CloudMoolah) MOO Token (XMOO) has successfully listed on Coinsuper as its first exchange. Cloud Alliance’s flagship product, CloudMoolah...</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="news-detail-6.html" class="news-btn">Read More &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true">
+            </i></a> 
+          </div>
+        </div>
+      </div>
+      <div class="row v-pad">
+        <div class="col-md-6 v-pad news-invert">
+          <div class="news-thumb"><img src="img/news-consentium.jpg" alt=""></div>
+        </div>
+        <div class="col-md-6 v-pad news-invert">
+          <div class="news-info">
+            <span class="news-date">May 2018</span>
+            <br>
+            <br>
+            <h3>Consentium successfully raises US$42 million</h3>
+            <br>
+            <p>Consentium sells out USD42M offering in token sales. Consentium allows peer-to-peer (P2P), multi-digital-currency transfers between users. The fintech platform also offers a transactional fee redistribution programme as an incentive to create...</p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="news-detail-7.html" class="news-btn">Read More &nbsp; <i class="fa fa-long-arrow-right" aria-hidden="true">
+            </i></a> 
+          </div>
+        </div>
+      </div> 
+      <div class="row v-pad">
+        <div class="col-md-6 v-pad">
           <div class="news-thumb"><img src="img/news-kualalumpur.jpg" alt=""></div>
         </div>
         <div class="col-md-6 v-pad">
@@ -244,7 +328,7 @@
             </i></a> 
           </div>
           </div>
-        </div>  
+      </div>  
       <div class="row v-pad">
         <div class="col-md-6 v-pad">
           <div class="news-thumb"><img src="img/team-nizam.jpg" alt=""></div>
