--- a/index.html
+++ b/index.html
@@ -451,6 +451,18 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
+	<a href="#victor" class="open-popup-link">
+	  <div class="circle-team">
+	    <div class="team-img"><img src="img/team-victor.jpg" alt=""></div>
+	  </div>
+	</a>
+        <div class="team-info">
+          <a href="#" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Victor Chow</h3>
+          <p>Chief Investment Officer</p>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
         <a href="#nizam" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-nizam.jpg" alt=""></div>
@@ -550,7 +562,7 @@
           <p>Project Manager</p>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
+      <!--<div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
         <a href="#amanda" class="open-popup-link">
           <div class="circle-team">
             <div class="team-img"><img src="img/team-amanda.jpg" alt=""></div>
@@ -561,19 +573,7 @@
           <h3>Amanda</h3>
           <p>Marketing Executive</p>
         </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
-        <a href="#victor" class="open-popup-link">
-          <div class="circle-team">
-            <div class="team-img"><img src="img/team-victor.jpg" alt=""></div>
-          </div>
-        </a>
-        <div class="team-info">
-          <a href="#" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
-          <h3>Victor Chow</h3>
-          <p>Chief Investment Officer</p>
-        </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
