updated victor LinkdIn and korea address

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         </div>
         </a>
         <div class="team-info">
-          <a href="#" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/victorchowsingapore/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Victor Chow</h3>
           <p>Chief Investment Officer</p>
         </div>
@@ -695,8 +695,8 @@
         </p>
         <br><br>
         <h3>South Korea</h3>
-        <p>Address here<br>
-          Address here<br>
+        <p>373 Gangnam-daero<br>
+          Seocho-dong, Seocho-gu<br>
           Seoul, South Korea
         </p>
       </div>
