--- a/index.html
+++ b/index.html
@@ -1217,12 +1217,11 @@ $(function() {
               data: form.serialize(), // serializes the form's elements.
               success: function(data)
               {
-                  form.reset();
                   alert(data); // show response from the php script.
                   $("#contactForm").find("input[type=text], textarea").val("");
               }
             });
-  
+            $('#contactForm').reset();
         e.preventDefault();
     }
   </script>
