--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@ $(function() {
                   $("#contactForm").find("input[type=text], textarea").val("");
               }
             });
-            $('#contactForm').reset();
+            $('#contactForm')[0].reset();
         e.preventDefault();
     }
   </script>
