--- a/index.html
+++ b/index.html
@@ -1222,7 +1222,7 @@ $(function() {
               }
             });
             $('#contactForm')[0].reset();
-        e.preventDefault();
+        //e.preventDefault();
     }
   </script>
 <!-- Animate element -->
