--- a/index.html
+++ b/index.html
@@ -762,7 +762,8 @@
     <div id="contactus" class="white-popup mfp-hide sans" style="text-align:center;">
       <h3>Make an Appointment</h3>
       <br><br>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere metus sed purus varius luctus. Quisque egestas mi nec mattis tristique. Cras pellentesque mollis elit, vel efficitur lacus tempus id.</p>
+      <p>Want to raise funds through an ICO/STO or engage us for technology consulting in the areas of blockchain?
+          Talk to us today! We will get back to you within 48 hours.</p>
       <br>
       <div class="v-pad inputDiv">
         <input type='text' class="input-style"  placeholder="NAME" id="contact_name" name="name"/>
