Added Jordan Ng

--- a/index.html
+++ b/index.html
@@ -561,6 +561,18 @@
           <p>Project Manager</p>
         </div>
       </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#jordan" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-jordan.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/jordan-ng-90402b142/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Jordan Ng</h3>
+          <p>Content Marketing Executive</p>
+        </div>
+      </div>
       <!--<div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
         <a href="#amanda" class="open-popup-link">
           <div class="circle-team">
@@ -1032,6 +1044,15 @@
   <h3>Chief Investment Officer</h3>
   <br><br>
   <p>Victor Chow is a serial entrepreneur and senior corporate leader with over 28 years’ experience working in venture capital, start-ups, telecommunications, ICT, cryptofunds, financial & blockchain technologies, and most recently turned business investor. As Novum's Chief Investment Officer, he is responsible for deal-sourcing, M&A activities and investments. Victor has held C-level positions across general management, strategic planning, business development, sales, marketing and global operations management in Asia Pacific, Europe and North America. He was previously the Founding CEO of Singapore-based Fintech Accelerator INSPIRASIA and was Head of Asia for Life.SREDA VC Fintech-focused fund. He was most renowned in the IT industry for his contributions as the Global Chief Operating Officer COO for Cloud Computing and NextGen Data Centers of Huawei Technologies, a leading global information and communications technology company based in Shen Zhen China. Currently, Victor is also the Venture Partner of Fatfish Blockchain Limited - an ASX listed technology venture builder and Founder of ICOWorld Exchange and Senior Advisor to the International Decentralized Association of Cryptocurrency and Blockchains (IDACB).</p>
+</div>
+
+<div id="jordan" class="white-popup big-popup mfp-hide sans">
+  <h2>Jordan Ng</h2>
+  <h3>Content Marketing Executive</h3>
+  <br><br>
+  <p>Jordan brings valuable and relevant experience from his prior role at Sakae Fintech as a Marketing Executive. One of the major projects he completed included conceptualising, designing and content writing for two websites.</p>
+  <br>
+  <p>Jordan graduated from RMIT University with Bachelor of Business in Marketing. Being the captain of the university sports team, Jordan is respected for his tenacity, discipline and for having great camaraderie with his team. His years of experience in a competitive sport as a captain and follower earned him the ideal skills to demonstrate leadership, excellence and the ability to step back.</p>
 </div>
 <!---------- Team popup end ------------>
 
