Added new team members

--- a/index.html
+++ b/index.html
@@ -573,18 +573,56 @@
           <p>Content Marketing Executive</p>
         </div>
       </div>
-      <!--<div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.6s">
-        <a href="#amanda" class="open-popup-link">
+    </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#tien" class="open-popup-link">
           <div class="circle-team">
-            <div class="team-img"><img src="img/team-amanda.jpg" alt=""></div>
+            <div class="team-img"><img src="img/team-tien.jpg" alt=""></div>
           </div>
         </a>
         <div class="team-info">
-          <a href="https://www.linkedin.com/in/amanda-ho-997790110/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
-          <h3>Amanda</h3>
-          <p>Marketing Executive</p>
+          <a href="https://www.linkedin.com/in/lai-trung-tien-1a9148126/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Tien Trung</h3>
+          <p>Software Engineer</p>
         </div>
-      </div> -->
+      </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#praveen" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-praveen.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/praveen-v-0988a6a8" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Praveen Varayalil</h3>
+          <p>Software Engineer </p>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#viet" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-viet.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/hoang-viet-nguyen-978b5067/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Viet Nguyen</h3>
+          <p>Developer</p>
+        </div>
+      </div>
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#anna" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-anna.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/dinh-phuong-anh/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Anna Dinh</h3>
+          <p>Analyst</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
@@ -1027,6 +1065,34 @@
   <p>Jordan brings valuable and relevant experience from his prior role at Sakae Fintech as a Marketing Executive. One of the major projects he completed included conceptualising, designing and content writing for two websites.</p>
   <br>
   <p>Jordan graduated from RMIT University with Bachelor of Business in Marketing. Being the captain of the university sports team, Jordan is respected for his tenacity, discipline and for having great camaraderie with his team. His years of experience in a competitive sport as a captain and follower earned him the ideal skills to demonstrate leadership, excellence and the ability to step back.</p>
+</div>
+
+<div id="tien" class="white-popup big-popup mfp-hide sans">
+  <h2>Tien Trung</h2>
+  <h3>Software Engineer</h3>
+  <br><br>
+  <p>Results-oriented software engineer with 4 years’ experience in analysis, design, development and testing. Proficient in a variety of platforms and computing languages such as Swift, Kotlin, Php and Javascript. Skilled at team collaboration while working independently in remote environments.</p>
+</div>
+
+<div id="praveen" class="white-popup big-popup mfp-hide sans">
+  <h2>Praveen Varayalil</h2>
+  <h3>Software Engineer</h3>
+  <br><br>
+  <p>Praveen has had a hands-on experience of 4 years in areas of Laravel framework, API development and JavaScript. Prior to that, Praveen graduated from Anna University Chennai with Masters of Computer Application.</p>
+</div>
+
+<div id="viet" class="white-popup big-popup mfp-hide sans">
+  <h2>Viet Nguyen</h2>
+  <h3>Developer</h3>
+  <br><br>
+  <p>With 5 years of coding experience, Viet is a code lover experienced in android-based application and back-end web server. Previous expertise accumulated from game porting and system development. Viet also graduated from the School of University of Engineering and Technology (VNU-UET).</p>
+</div>
+
+<div id="anna" class="white-popup big-popup mfp-hide sans">
+  <h2>Anna Dinh</h2>
+  <h3>Analyst</h3>
+  <br><br>
+  <p>Graduated from Vietnam National University with Bachelor of Finance and Banking, Anna has three years of experience in conducting research and financial analysis reports with a firm base in crowdfunding. Being a President of Research Community at VNU gave her an invaluable opportunity to enhance her leadership skills and demonstrate resilience and discipline. Having opportunities to travel, meet up and work with people from different cultures widens her horizon and helps her realise herself as a realistic dreamer who can be analytical as well as intuitive, confident and humble at the same time, and always eager to challenge myself to satisfy the insatiable hunger for knowledge and new experience.</p>
 </div>
 <!---------- Team popup end ------------>
 
