Updated Sg office address

--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@
       </div>
       <div class="col-md-3 col-sm-12 col-12 v-pad wow fadeInRight">
         <h3>Singapore HQ</h3>
-        <p>Mox, Level 3, 451 Joo Chiat Road,<br>
-           Singapore 427664
+        <p>JustCo, Level 3, 40A Orchard Rd<br>
+           Singapore 238838
         </p>
         <br><br>
         <h3>Malaysia</h3>
