Updated About section

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="h-line"></div>
         <span class="small-font">About Novum Capital</span>
         <div class="about-logo wow fadeInUp"><img src="img/logo-big.png" alt=""></div>
-        <h3 class="wow fadeInUp">Novum Capital has been engaged successfully by enterprises and start-ups to raise funds since late 2017. Being a global advisory and investment firm specialising in blockchain and crypto-economy, we provide full spectrum ICO advisory and investments services. Based in Singapore, we have offices in Kuala Lumpur, Ha Noi and Bali.</h3>
+        <h3 class="wow fadeInUp">Novum Capital has been engaged successfully by enterprises and start-ups to raise funds since late 2017. Being a global advisory and investment firm specialising in blockchain and crypto-economy, we provide full spectrum ICO advisory and investments services. Based in Singapore, we have offices in Malaysia, Vietnam, Indonesia and South Korea.</h3>
       </div>
     </div>
   </div>
