Updated Advised projects websites

--- a/index.html
+++ b/index.html
@@ -248,39 +248,35 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <p class="small-font">OUR TEAM MEMBERS HAVE ALSO ADVISED</p>
     <br>
     <div class="row wow fadeInUp">
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-antihack.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-arawtoken.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-atf.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-centareum.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-dice.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-elysian.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://antihack.io/" target="_blank"><img src="img/advised-antihack.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://arawtoken.io/" target="_blank"><img src="img/advised-arawtoken.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.agrotechfarm.io/" target="_blank"><img src="img/advised-atf.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://centareum.io/" target="_blank"><img src="img/advised-centareum.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://dice.money/" target="_blank"><img src="img/advised-dice.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://elycoin.io/" target="_blank"><img src="img/advised-elysian.jpg" alt=""></div>
     </div>
     <div class="row wow fadeInUp">
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-flipnpik.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-gemstra.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-ggrocket.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-highvibe.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-imusify.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-megax.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.flipnpik.com/" target="_blank"><img src="img/advised-flipnpik.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://gemstra.com/" target="_blank"><img src="img/advised-gemstra.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://ggrocket.io/en" target="_blank"><img src="img/advised-ggrocket.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.highvibe.network/" target="_blank"><img src="img/advised-highvibe.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://imusify.io/" target="_blank"><img src="img/advised-imusify.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.megax.io/" target="_blank"><img src="img/advised-megax.jpg" alt=""></a></div>
     </div>
     <div class="row wow fadeInUp">
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-opu.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-redcab.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-spiking.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-tillbilly.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-urunit.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-vanig.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://ico.opu.ai/" target="_blank"><img src="img/advised-opu.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://redcab.io/" target="_blank"><img src="img/advised-redcab.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://spiking.com/ito/" target="_blank"><img src="img/advised-spiking.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://ico.tillbilly.com/" target="_blank"><img src="img/advised-tillbilly.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://urunit.io/" target="_blank"><img src="img/advised-urunit.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href=https://vanig.io/"" target="_blank"><img src="img/advised-vanig.jpg" alt=""></a></div>
     </div>
     <div class="row wow fadeInUp">
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-viola.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-xrt.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-gofind.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-getchange.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-getdoit.jpg" alt=""></div>
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-mapcoin.jpg" alt=""></div>
-    </div>
-    <div class="row wow fadeInUp">
-      <div class="col-lg-2 col-md-4 col-4 v-pad"><img src="img/advised-greenlink.jpg" alt=""></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://viola.ai/" target="_blank"><img src="img/advised-viola.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.xrtfoundation.org/" target="_blank"><img src="img/advised-xrt.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://www.gofindxr.com/" target="_blank"><img src="img/advised-gofind.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://getchange.com/ico/" target="_blank"><img src="img/advised-getchange.jpg" alt=""></a></div>
+      <div class="col-lg-2 col-md-4 col-4 v-pad"><a href="https://getdoit.io/" target="_blank"><img src="img/advised-getdoit.jpg" alt=""></a></div>
     </div>
   </div>
 </section>
