jordan job title

--- a/index-kr.html
+++ b/index-kr.html
@@ -580,7 +580,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
           <a href="https://www.linkedin.com/in/jordan-ng-90402b142/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Jordan Ng</h3>
-          <p>컨텐츠 마케팅 이사</p>
+          <p>콘텐츠 마케팅 임원</p>
         </div>
       </div>
     </div>
