--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
           <a href="https://www.linkedin.com/in/brandon-sangsoo-lee-74a91416/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Brandon Lee</h3>
-          <p>Country Manager (Korea)</p>
+          <p>Partner</p>
         </div>
       </div>
     </div>
@@ -1022,7 +1022,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 <div id="brandon" class="white-popup big-popup mfp-hide sans">
   <h2>Brandon Lee</h2>
-  <h3>Country Manager (Korea)</h3>
+  <h3>Partner</h3>
   <br><br>
   <p>With many years of experience as a data scientist across industries and corporations such as Samsung and Siemens, Brandon excels in optimisation and improvisation of all processes. Prior to starting his own digital analytics company, SmartMind Inc, he was serving as the Vice President / Senior Data Scientist at Mediacorp Pte Ltd, the largest media business in Singapore. A sociable and quick-witted leader, Brandon breaks the stereotypes of a data scientist - channeling casual conversations into observations while combining his expertise to elevate and improve business processes with his findings.</p>
 </div>
