--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
           <a href="https://www.linkedin.com/in/irwinchee/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Irwin Chee</h3>
-          <p>Managing Consultant</p>
+          <p>Associate Partner</p>
         </div>
       </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
@@ -540,7 +540,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="team-info">
             <a href="https://www.linkedin.com/in/coco-ong/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
             <h3>Coco Ong</h3>
-            <p>Marketing Chief</p>
+            <p>Associate Partner</p>
         </div>
        </div>
       <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp">
