--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-M5T3X9R');</script>
 	<!-- End Google Tag Manager -->
+	<meta property="og:image" content="https://www.novum.capital/nc-thumbnail.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.novum.capital" />
+    <meta property="og:title" content="Novum Capital has been engaged successfully by enterprises and start-ups to raise funds since late 2017" />
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Novum Capital</title>
