--- a/index.html
+++ b/index.html
@@ -634,6 +634,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#minh" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-minh.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/minh-le-062984114" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Minh Le</h3>
+          <p>Investment Analyst</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 <!------------ Novum edge end ------------>
@@ -1103,6 +1117,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <h3>Analyst</h3>
   <br><br>
   <p>Graduated from Vietnam National University with Bachelor of Finance and Banking, Anna has three years of experience in conducting research and financial analysis reports with a firm base in crowdfunding. Being a President of Research Community at VNU gave her an invaluable opportunity to enhance her leadership skills and demonstrate resilience and discipline. Having opportunities to travel, meet up and work with people from different cultures widens her horizon and helps her realise herself as a realistic dreamer who can be analytical as well as intuitive, confident and humble at the same time, and always eager to challenge myself to satisfy the insatiable hunger for knowledge and new experience.</p>
+</div>
+
+<div id="minh" class="white-popup big-popup mfp-hide sans">
+  <h2>Minh Le</h2>
+  <h3>Investment Analyst</h3>
+  <br><br>
+  <p>Achieved 3 years’ experience in Business Development & Consulting in Vietnam/ Singapore. Minh have a strong academic background in Finance with a Bachelor of Banking & Finance and a Master of Global Finance in SP Jain where he got scholarship to study over Singapore, Sydney and Dubai. He not only has fully acknowledge of Banking & Financial Products but also Relationship Management with well experienced from different sorts of cultures and people, as well as applicable skillsets of quantitative & qualitative data analysis and market research.</p>
 </div>
 <!---------- Team popup end ------------>
 
