--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
         </a>
         <div class="team-info">
-          <a href="#" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/chermaine-ng-921694163/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
           <h3>Chermaine Ng</h3>
           <p>Content Marketing Executive.</p>
         </div>
