--- a/index-kr.html
+++ b/index-kr.html
@@ -601,7 +601,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p>Developer</p>
         </div>
       </div>
-      
+      <div class="col-md-3 col-sm-6 col-6 vpad team-wrapper wow fadeInUp" data-wow-delay="0.3s">
+        <a href="#chermaine" class="open-popup-link">
+          <div class="circle-team">
+            <div class="team-img"><img src="img/team-chermaine.jpg" alt=""></div>
+          </div>
+        </a>
+        <div class="team-info">
+          <a href="https://www.linkedin.com/in/chermaine-ng-921694163/" target="_blank" class="team-linkedin"><i class="fa fa-linkedin"></i></a>
+          <h3>Chermaine Ng</h3>
+          <p>Content Marketing Executive.</p>
+        </div>
+      </div>
     </div>
   </div>
 </section>
